[INTERNAL] sap.m.MessageView: Correct resize and close button overlap
SNOW: DINC0583947

--- a/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon/MessageView.less
+++ b/src/themelib_sap_horizon/src/sap/m/themes/sap_horizon/MessageView.less
@@ -72,7 +72,7 @@
 
 .sapMMsgView .sapMIBar.sapMHeader-CTX {
 	background-color: var(--sapGroup_ContentBackground);
-	padding-left: 1rem;
+	padding: 0 1rem;
 }
 
 .sapMMsgViewDescIcon {
